# tradeit

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
data/: bad_ticks.csv  sample_ticks.csv  test_ticks.csv
include/core/: order.hpp  trade.hpp
include/engine/: market_data_handler.hpp  order_book.hpp  simulator.hpp
include/strategy/: arbitrage_trader.hpp  market_maker.hpp  momentum_trader.hpp  strategy.hpp
src/core/: order.cpp
src/engine/: market_data_handler.cpp  order_book.cpp  simulator.cpp
src/strategy/: arbitrage_trader.cpp  market_maker.cpp  momentum_trader.cpp
tests/: test_arbitrage_trader.cpp  test_csv_parser.cpp  test_integration.cpp  test_market_maker.cpp  test_momentum_trader.cpp  test_order_book.cpp
